<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="20dp"
    android:background="@color/white"
    tools:context=".fragment.ChangePasswordFragment">

    <!-- Header -->
    <TextView
        android:id="@+id/changePasswordTitleTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/change_password_title"
        android:textSize="28sp"
        android:textStyle="bold"
        android:textColor="@color/black"
        android:layout_marginBottom="30dp" />

    <!-- Current Password -->
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/change_password_current_label"
        android:textSize="14sp"
        android:textStyle="bold"
        android:textColor="@color/black"
        android:layout_marginBottom="5dp" />

    <EditText
        android:id="@+id/currentPasswordEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/change_password_current_hint"
        android:inputType="textPassword"
        android:autofillHints="password"
        android:textSize="16sp"
        android:background="@drawable/edit_text_background"
        android:padding="15dp"
        android:layout_marginBottom="20dp"
        tools:ignore="VisualLintTextFieldSize" />

    <!-- New Password -->
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/change_password_new_label"
        android:textSize="14sp"
        android:textStyle="bold"
        android:textColor="@color/black"
        android:layout_marginBottom="5dp" />

    <EditText
        android:id="@+id/newPasswordEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/change_password_new_hint"
        android:inputType="textPassword"
        android:autofillHints="password"
        android:textSize="16sp"
        android:background="@drawable/edit_text_background"
        android:padding="15dp"
        android:layout_marginBottom="20dp"
        tools:ignore="VisualLintTextFieldSize" />

    <!-- Confirm Password -->
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/change_password_confirm_label"
        android:textSize="14sp"
        android:textStyle="bold"
        android:textColor="@color/black"
        android:layout_marginBottom="5dp" />

    <EditText
        android:id="@+id/confirmPasswordEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/change_password_confirm_hint"
        android:inputType="textPassword"
        android:autofillHints="password"
        android:textSize="16sp"
        android:background="@drawable/edit_text_background"
        android:padding="15dp"
        android:layout_marginBottom="30dp"
        tools:ignore="VisualLintTextFieldSize" />

    <!-- Change Password Button -->
    <Button
        android:id="@+id/changePasswordButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/change_password_button"
        android:textSize="16sp"
        android:textStyle="bold"
        android:background="@drawable/edit_text_background"
        android:layout_marginBottom="12dp"
        android:padding="15dp"
        tools:ignore="VisualLintButtonSize" />

    <!-- Cancel Button -->
    <Button
        android:id="@+id/cancelButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/edit_text_background"
        android:padding="15dp"
        android:text="@string/change_password_cancel_button"
        android:textColor="#B0BEC5"
        android:textSize="16sp"
        android:textStyle="bold"
        tools:ignore="VisualLintButtonSize" />

</LinearLayout>
